syntax = "proto3";

package ratelimiter;

option go_package = "github.com/devfullcycle/ratelimiter/examples/grpc";

service RateLimiter {
  rpc Allow (AllowRequest) returns (AllowResponse) {}
}

message AllowRequest {
  string client_id = 1;
}

message AllowResponse {
  bool allowed = 1;
  int32 requests_made = 2;
  int32 limit = 3;
  string retry_after = 4;
}
